# llama-smart-proxy

./: .gitignore  README.md  config.json  config_sim.json  main.py  main_sim.py  pyproject.toml  requirements.txt  seed.md
.kilocode/rules/: specify-rules.md
.specify/memory/: constitution.md
plugins/gpu/: agent.py  config.json  vram_accuracy_validator.py
specs/: 003-seed.md
specs/002-clean-arch-ollama/: contracts.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-seed-adaptation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-smart-proxy/: plan.md  spec.md
src/entities/: agent.py  gpu.py  gpu_assignment.py  gpu_pool_status.py  message.py  model.py  performance_monitor.py  server.py
src/frameworks_drivers/: __init__.py  agent_manager.py  base_llm_service.py  config.py  gpu_allocator.py  gpu_detector.py  gpu_monitor.py  gpu_resource_manager.py  model_resolver.py  (+7 more)
tests/: conftest.py  llama_cpp_checker.py  ollama_checker.py  test_adaptive_gpu_allocator.py  test_agent.py  test_agent_manager.py  test_agent_manager_impl.py  test_api_integration.py  test_chat_controller.py  test_config.py  test_cpu_fallback.py  test_get_health.py  test_gguf_utils.py  test_gpu_allocation_integration.py  test_gpu_detector.py  test_gpu_health_integration.py  test_gpu_monitor.py  test_llama_cpp_service.py  test_llm_service_factory.py  test_message.py  test_model_repository.py  test_model_resolver.py  test_multi_gpu_allocation_strategy.py  test_ollama_service.py  test_performance_monitor.py  test_protocols.py  test_server_pool.py  test_server_pool_integration.py  test_single_gpu_allocation_strategy.py  test_vram_estimator.py
(+43 files in other folders)
